Better env setup

--- a/HAPI_01.ipynb
+++ b/HAPI_01.ipynb
@@ -26,6 +26,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The Heliophysics Data Application Programmer’s Interface (HAPI) specification is a time series download and streaming format specification plus tool bundle Useful for SCIENTISTS wanting easy access to multiple data sets, and to DATA PROVIDERS seeking a standard for serving time series data. When data are available from a HAPI server, there is no need to download data files and write custom file reader programs.\n",
+    "\n",
+    "Using a HAPI client library, data can be loaded into an array using a single command in IDL, MATLAB, and Python. Currently HAPI has time series data from AMDA, CCMC/iSWA, CDAWeb, Das2, FTEC, LISIRD, OMNIWeb & SSCWeb.\n",
+    "\n",
+    "* HAPI provides a standard specification that simplifies data access for Heliophysics time series data\n",
+    "* Software for downloading data from HAPI servers in Autoplot, IDL, MATLAB, SPEDAS, and Python\n",
+    "* Provides the simplest API that allows access to time series data in a streaming form\n",
+    "* Allows a user not to need knowledge of file system boundaries, directory layouts, and file formats\n",
+    "* Data are accessible at a minimum in a simple CSV-formatted stream + JSON metadata\n",
+    "* COSPAR-approved: that “HAPI be the common data access API for space science and space weather data.”\n",
+    "* All HAPI data accessible via: http://hapi-server.org/servers/\n",
+    "\n",
+    "Tools and clients available at http://github.com/hapi-server/, data and documentation at http://hapiserver.org/servers/, or contact us at hapi-help@groups.com\n",
+    "\n",
+    "![HAPI in action](hapi_splash.png \"HAPI in action\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Setup\n",
     "We'll be using examples from the October 28 2022 flare + CME event that started at 15:35 UTC and explore it from a variety of instruments.\n",
     "  \n",
