--- a/HAPI_04.ipynb
+++ b/HAPI_04.ipynb
@@ -22,6 +22,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here we set up our Python environment for this Notebook\n",
+    "from hapiclient import hapi\n",
+    "from hapiplot import hapiplot\n",
+    "%matplotlib inline \n",
+    "%config InlineBackend.figure_formats = ['svg']\n",
+    "# Show plots in page instead of opening a window\n",
+    "import warnings\n",
+    "warnings.simplefilter(\"ignore\", ResourceWarning) # removes spurious Notebook warns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
