--- a/HAPI_00.ipynb
+++ b/HAPI_00.ipynb
@@ -4,21 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introduction\n",
+    "\n",
+    "This class will cover the use of the `hapiclient` package, which allows you obtain data from over 8 different data servers with a few lines of code.\n",
+    "\n",
+    "We will also show how data obtained with `hapiclient` can be used in other Heliophysics Python packages.\n",
+    "\n",
+    "\n",
     "# Overview of the HAPI Standard\n",
     "\n",
-    "The [Heliophysics Application Programmer’s Interface (HAPI)](http://hapi-server.org/) data access specification is a RESTful API and streaming format specification for delivering digital time series data.\n",
+    "The [Heliophysics Application Programmer’s Interface (HAPI)](http://hapi-server.org/) data access specification is a RESTful API and streaming format specification for delivering digital time series data [[Weigel et al., 2021](https://hapi-server.org/docs/Weigel_2021_HAPI-An_API_Standard_for_Accessing_Heliophysics_Time_Series_Data.pdf)].\n",
     "\n",
     "A HAPI server provides time series data in a mission-independent format as a single continous data stream (regardless of mission file formats or file boundaries) from any mission or data provider that has implemented a HAPI server.\n",
     "\n",
     "HAPI servers\n",
     "\n",
-    "* AMDA\n",
+    "* CDPP/AMDA\n",
     "* CCMC/iSWA\n",
-    "* CDAWeb\n",
-    "* Das2\n",
-    "* FTEC\n",
-    "* LISIRD\n",
-    "* SSCWeb\n",
+    "* SPDF/CDAWeb\n",
+    "* UIowa/Das2\n",
+    "* JHU/APL/DataShop\n",
+    "* FTECS/RBSPICE\n",
+    "* LASP/LISIRD\n",
+    "* SPDF/SSCWeb\n",
+    "* VirES/SWARM\n",
     "\n",
     "All HAPI accessible and browsable at http://hapi-server.org/servers/"
    ]
@@ -33,7 +42,7 @@
     "\n",
     "This specification was developed because no standard exists. Data providers use incompatible conventions so that automated access to and aggregation of data requires users to write custom code for each data provider.\n",
     "\n",
-    "As an example, prior to HAPI, to write a Python program that downloads data using the web API from SSCWeb, CDAWeb, LISIRD,and AMD\n",
+    "As an example, prior to HAPI, to write a Python program that downloads data using the web API from SSCWeb, CDAWeb, LISIRD, and AMDA would require writing four scripts that implements each of their APIs.\n",
     "\n",
     "\n",
     "# Overview of HAPI Python Software"
@@ -54,7 +63,7 @@
     "\n",
     "`hapiplot` is a software package that was developed for testing and quick-look plots of data returned by `hapiclient`. \n",
     "\n",
-    "In this lab, you will use `hapiplot` along with the standard Python plotting package `matplotlib` and also plotting functions available in Heliophysics libraries such as `SunPy`, `PyTplot`, and `SpacePy`."
+    "In this lab, you will also use the standard Python plotting package `matplotlib` and plotting functions available in Heliophysics libraries such as `SunPy`, `PyTplot`, and `SpacePy`."
    ]
   },
   {
@@ -80,13 +89,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overview of Notebooks\n",
+    "# Outline of Class\n",
     "\n",
-    "* [HAPI_01.ipynb - First look at HAPI](HAPI_01.ipynb) \n",
-    "* [HAPI_02.ipynb - Data structures](HAPI_02.ipynb)\n",
-    "* [HAPI_03.ipynb - Plotting, Pandas, and metadata](HAPI_03.ipynb)\n",
-    "* [HAPI_04.ipynb - Data fusion using HAPI](HAPI_04.ipynb)\n",
-    "* [HAPI_05.ipynb - The HAPI ecosystem](HAPI_05.ipynb)"
+    "* [HAPI_01.ipynb - Basics](HAPI_01.ipynb): 10-minute overview then work on two problems for 20 minutes\n",
+    "* Go over solution to problems and common questions\n",
+    "* [HAPI_02.ipynb - Data structures](HAPI_02.ipynb): 10-minute overview then work on two problems for 20 minutes\n",
+    "* Go over solution to problems and common questions\n",
+    "* Break\n",
+    "* [HAPI_03.ipynb - Plotting](HAPI_03.ipynb): 10-minute overview then work on two problems for 20 minutes\n",
+    "* Go over solution to problems and common questions\n",
+    "* [HAPI_04.ipynb - Problems](HAPI_04.ipynb): Problems to work on after break\n",
+    "* Comments on problems\n",
+    "* Closing remarks"
    ]
   }
  ],
