--- a/HAPI_01.ipynb
+++ b/HAPI_01.ipynb
@@ -9,7 +9,7 @@
     "* **[HAPI_01.ipynb - Basics](HAPI_01.ipynb) (this Notebook)**\n",
     "* [HAPI_02.ipynb - Data structures](HAPI_02.ipynb)\n",
     "* [HAPI_03.ipynb - Plotting](HAPI_03.ipynb)\n",
-    "* [HAPI_04.ipynb - Data fusion using HAPI](HAPI_04.ipynb)\n",
+    "* [HAPI_04.ipynb - Problems](HAPI_04.ipynb)\n",
     "\n",
     "# Setup\n",
     "\n",
