--- a/HAPI_02.ipynb
+++ b/HAPI_02.ipynb
@@ -11,7 +11,7 @@
     "* [HAPI_01.ipynb - Basics](HAPI_01.ipynb) \n",
     "* **[HAPI_02.ipynb - Data structures](HAPI_02.ipynb) (this Notebook)**\n",
     "* [HAPI_03.ipynb - Plotting](HAPI_03.ipynb)\n",
-    "* [HAPI_04.ipynb - Data fusion using HAPI](HAPI_04.ipynb)"
+    "* [HAPI_04.ipynb - Problems](HAPI_04.ipynb)"
    ]
   },
   {
@@ -47,9 +47,11 @@
     "# Data Model\n",
     "\n",
     "A request for data of the form\n",
-    "```\n",
+    "\n",
+    "```python\n",
     "data, meta = hapi(server, dataset, parameters, start, stop)\n",
     "```\n",
+    "\n",
     "returns the [Numpy N-D array](https://docs.scipy.org/doc/numpy-1.15.1/user/quickstart.html) `data` and a Python dictionary `meta` from a HAPI-compliant data server `server`. The structure of `meta` mirrors the structure of the metadata response from a HAPI server.\n",
     "\n",
     "The basic data structure returned by all HAPI servers is a CSV file in which the first column is a time stamp and subsequent columns are data measured or associated with that time stamp. The columns are mapped to one or more parameters (that may be multi-dimensional arrays) using the metadata associated with the request for CSV data.\n",
