--- a/HAPI_03.ipynb
+++ b/HAPI_03.ipynb
@@ -6,7 +6,7 @@
     "id": "nPrfD4g5W6Dh"
    },
    "source": [
-    "# Overview of Notebooks\n",
+    "# Class Notebooks\n",
     "\n",
     "* [HAPI_01.ipynb - Basics](HAPI_01.ipynb) \n",
     "* [HAPI_02.ipynb - Data structures](HAPI_02.ipynb)\n",
@@ -8730,7 +8730,7 @@
    "suppress_output": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -8744,7 +8744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
