--- a/HAPI_04.ipynb
+++ b/HAPI_04.ipynb
@@ -6,12 +6,25 @@
     "id": "nPrfD4g5W6Dh"
    },
    "source": [
-    "# Overview of Notebooks\n",
+    "# Class Notebooks\n",
     "\n",
     "* [HAPI_01.ipynb - Basics](HAPI_01.ipynb) \n",
     "* [HAPI_02.ipynb - Data structures](HAPI_02.ipynb)\n",
     "* [HAPI_03.ipynb - Plotting](HAPI_03.ipynb)\n",
     "* **[HAPI_04.ipynb - Problems](HAPI_04.ipynb) (this Notebook)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Instructions\n",
+    "\n",
+    "Use the rest of the class time to work on these problems. Each problem is expected to take approximately one hour, so start with a problem that interests you.\n",
+    "\n",
+    "For in-person students, we encourage you to work with one or more neighbors on a problem.\n",
+    "\n",
+    "Several HAPI experts are available for questions on chat, and three of us will be on-site for in-person questions."
    ]
   },
   {
@@ -46,6 +59,7 @@
     "    ace              1997-08-25T17:48:00.000Z  2022-07-04T23:48:00.000Z\n",
     "    active           1989-09-29T00:00:00.000Z  1991-10-04T08:00:00.000Z\n",
     "    aec              1973-12-17T08:01:00.000Z  1978-12-10T00:00:00.000Z\n",
+    "    ... (243 more lines)\n",
     "    ```\n",
     "\n",
     "1. Create a plot showing the time interval of availability of ephemeris data from the SSCWeb HAPI server. The plot should have the form\n",
@@ -287,7 +301,7 @@
    "suppress_output": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
