--- a/HAPI_00.ipynb
+++ b/HAPI_00.ipynb
@@ -105,21 +105,49 @@
     "\n",
     "Also feel free to ask me questions while I am presenting.\n",
     "\n",
-    "* [HAPI_01.ipynb - Basics](HAPI_01.ipynb): 10-minute overview then students work on two problems for 20 minutes\n",
-    "* Go over solution to problems and common questions\n",
-    "* [HAPI_02.ipynb - Data structures](HAPI_02.ipynb): 10-minute overview then students work on two problems for 20 minutes\n",
-    "* Go over solution to problems and common questions\n",
-    "* Break\n",
-    "* [HAPI_03.ipynb - Plotting](HAPI_03.ipynb): 10-minute overview then work on two problems for 20 minutes\n",
-    "* Go over solution to problems and common questions\n",
-    "* [HAPI_04.ipynb - Problems](HAPI_04.ipynb): Problems to work on after break\n",
-    "* Comments on problems\n",
+    "## Part I 16:00-17:30 Madrid Time (14:00-15:30 UTC)\n",
+    "\n",
+    "### [HAPI_00.ipynb](HAPI_00.ipynb) - Introduction\n",
+    "\n",
+    "* 10-minute overview of the HAPI project and related software\n",
+    "\n",
+    "### [HAPI_01.ipynb](HAPI_01.ipynb) - Basics\n",
+    "* 5-minute overview\n",
+    "* 10-minutes for students to work on two problems\n",
+    "* 5-minute discussion of solution to problems and common questions \n",
+    "\n",
+    "### [HAPI_02.ipynb](HAPI_02.ipynb) - Data structures\n",
+    "\n",
+    "* 5-minute overview\n",
+    "* 20-minutes for students work on two problems\n",
+    "* 5-minute discussion of solution to problems and common questions \n",
+    "\n",
+    "## [HAPI_03.ipynb](HAPI_03.ipynb) - Plotting\n",
+    "\n",
+    "* 5-minute overview\n",
+    "* 20-minutes for students work on two problems\n",
+    "* 5-minute discussion of solution to problems and common questions \n",
+    "\n",
+    "## Part II Break 17:30-18:15 Madrid Time (15:30-16:15 UTC)\n",
+    "\n",
+    "45-minute break. We will be available for questions in-person and on Slack.\n",
+    "\n",
+    "## Part III 18:15-19:45 Madrid Time (16:30-17:15 UTC)\n",
+    "\n",
+    "### [HAPI_04.ipynb](HAPI_04.ipynb) - Problems\n",
+    "\n",
+    "* 5-minute overview\n",
+    "* 70-minutes for students work on two problems    \n",
+    "* 15-minute discussion of solution to problems and common questions \n",
+    "\n",
     "* Closing remarks"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
