--- a/HAPI_04.ipynb
+++ b/HAPI_04.ipynb
@@ -45,7 +45,7 @@
     "Starting with\n",
     "\n",
     "```python\n",
-    "with open('/tmp/availability.pkl', 'rb') as f:\n",
+    "with open('data/availability.pkl', 'rb') as f:\n",
     "    datasets = pickle.load(f)\n",
     "    logging.info('Read availability.pkl')\n",
     "print(datasets)\n",
@@ -64,7 +64,7 @@
     "\n",
     "1. Create a plot showing the time interval of availability of ephemeris data from the SSCWeb HAPI server. The plot should have the form\n",
     "\n",
-    "    `TODO`\n",
+    "    ![](imgs/avail.png)\n",
     "\n",
     "\n",
     "### Solution\n",
@@ -72,7 +72,7 @@
     "1\\. Table\n",
     "\n",
     "```python\n",
-    "with open('/tmp/availability.pkl', 'rb') as f:\n",
+    "with open('data/availability.pkl', 'rb') as f:\n",
     "    datasets = pickle.load(f)\n",
     "    logging.info('Read availability.pkl')\n",
     "\n",
@@ -84,56 +84,16 @@
     "\n",
     "2\\. Plot\n",
     "\n",
-    "```python\n",
-    "TODO\n",
-    "```\n",
+    "See `misc/availability.py` (will be removed prior to Summer School)\n",
     "\n",
     "## Advanced\n",
     "\n",
     "Write a program that creates the information in `datasets` by querying the SSCWeb HAPI server.\n",
     "\n",
+    "\n",
     "### Solution\n",
     "\n",
-    "```python\n",
-    "import os\n",
-    "import pickle\n",
-    "import logging\n",
-    "\n",
-    "from hapiclient import hapi\n",
-    "\n",
-    "# Change INFO to WARNING or ERROR to suppress logging messages in this script\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "\n",
-    "if not os.path.exists(\"availability.pkl\"):\n",
-    "\n",
-    "    server = 'https://hapi-server.org/servers/SSCWeb/hapi'\n",
-    "    \n",
-    "    resp = hapi(server)\n",
-    "    logging.info(resp)\n",
-    "\n",
-    "    datasets = resp['catalog']\n",
-    "    logging.info(datasets)\n",
-    "\n",
-    "    for idx, dataset in enumerate(datasets):\n",
-    "        logging.info(f'Working on dataset id {datasets[idx]}')\n",
-    "        resp = hapi(server, dataset[\"id\"], logging=True)\n",
-    "        startDate = resp[\"startDate\"]\n",
-    "        stopDate = resp[\"stopDate\"]\n",
-    "        # Add start/stop to each element in datasets list\n",
-    "        datasets[idx][\"startDate\"] = startDate\n",
-    "        datasets[idx][\"stopDate\"] = stopDate\n",
-    "        logging.info(f'  start = {startDate}\\tstop = {stopDate}')\n",
-    "\n",
-    "    # Save result so we don't need to recreate when we modify table and plot code.\n",
-    "    with open('availability.pkl', 'wb') as f:\n",
-    "        pickle.dump(datasets, f)\n",
-    "        logging.info('Saved availability.pkl')\n",
-    "else:\n",
-    "    with open('availability.pkl', 'rb') as f:\n",
-    "        datasets = pickle.load(f)\n",
-    "        logging.info('Read availability.pkl')\n",
-    "\n",
-    "```"
+    "See `availability()` in `misc/util.py` (will be removed prior to Summer School)"
    ]
   },
   {
@@ -145,7 +105,7 @@
     "Starting with\n",
     "\n",
     "```python\n",
-    "with open('/tmp/availability.pkl', 'rb') as f:\n",
+    "with open('data/availability.pkl', 'rb') as f:\n",
     "    datasets = pickle.load(f)\n",
     "    logging.info('Read availability.pkl')\n",
     "print(datasets)\n",
@@ -158,100 +118,7 @@
     "\n",
     "## Solution\n",
     "\n",
-    "```python\n",
-    "import os\n",
-    "import pickle\n",
-    "import logging\n",
-    "\n",
-    "from hapiclient import hapi\n",
-    "from hapiclient import hapitime2datetime\n",
-    "\n",
-    "# Change INFO to WARNING or ERROR to suppress logging messages in this script\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "\n",
-    "short_run = True # If True, only get data for first three s/c\n",
-    "\n",
-    "server = 'https://hapi-server.org/servers/SSCWeb/hapi'\n",
-    "start = \"2003-10-31T23:00:00Z\"\n",
-    "stop = \"2003-10-31T23:59:00Z\"\n",
-    "\n",
-    "\n",
-    "# Warning: This if block was copied from availability.py\n",
-    "if not os.path.exists(\"availability.pkl\"):\n",
-    "\n",
-    "    resp = hapi(server)\n",
-    "    logging.info(resp)\n",
-    "\n",
-    "    datasets = resp['catalog']\n",
-    "    logging.info(datasets)\n",
-    "\n",
-    "    for idx, dataset in enumerate(datasets):\n",
-    "        logging.info(f'Working on dataset id {datasets[idx]}')\n",
-    "        resp = hapi(server, dataset[\"id\"], logging=True)\n",
-    "        startDate = resp[\"startDate\"]\n",
-    "        stopDate = resp[\"stopDate\"]\n",
-    "        # Add start/stop to each element in datasets list\n",
-    "        datasets[idx][\"startDate\"] = startDate\n",
-    "        datasets[idx][\"stopDate\"] = stopDate\n",
-    "        logging.info(f'  start = {startDate}\\tstop = {stopDate}')\n",
-    "\n",
-    "    # Save result so we don't need to recreate when we modify table and plot code.\n",
-    "    with open('availability.pkl', 'wb') as f:\n",
-    "        pickle.dump(datasets, f)\n",
-    "        logging.info('Saved availability.pkl')\n",
-    "else:\n",
-    "    with open('availability.pkl', 'rb') as f:\n",
-    "        datasets = pickle.load(f)\n",
-    "        logging.info('Read availability.pkl')\n",
-    "\n",
-    "\n",
-    "print(80*\"-\")\n",
-    "print(\"Availability\")\n",
-    "# Create table\n",
-    "start_wanted = hapitime2datetime(start)\n",
-    "stop_wanted  = hapitime2datetime(stop)\n",
-    "n = 0\n",
-    "for idx, dataset in enumerate(datasets):\n",
-    "    # Pad ids\n",
-    "    id = \"{:15s}\".format(datasets[idx][\"id\"])\n",
-    "    start_available = hapitime2datetime(datasets[idx][\"startDate\"])[0]\n",
-    "    stop_available = hapitime2datetime(datasets[idx][\"stopDate\"])[0]\n",
-    "\n",
-    "    if start_available <= start_wanted and stop_available >= stop_wanted:\n",
-    "        print(f'{id}  {datasets[idx][\"startDate\"]}  {datasets[idx][\"stopDate\"]}')\n",
-    "        n = n+1\n",
-    "\n",
-    "        logging.info(f'Getting data for {datasets[idx]}')\n",
-    "        data, meta = hapi(server, datasets[idx][\"id\"], 'Spacecraft_Region', start, stop, logging=False)\n",
-    "\n",
-    "        if len(data['Spacecraft_Region']) > 0:\n",
-    "            datasets[idx][\"Spacecraft_Region\"] = data['Spacecraft_Region'][0]\n",
-    "            datasets[idx][\"First_Value\"] = data['Time'][0].decode('utf-8')\n",
-    "        else:\n",
-    "            datasets[idx][\"Spacecraft_Region\"] = None\n",
-    "\n",
-    "    if short_run and n > 3:\n",
-    "        break\n",
-    "\n",
-    "\n",
-    "print(f'\\n{n} s/c have ephemeris data from {start} to {stop}')\n",
-    "print(80*\"-\")\n",
-    "print(f\"Spacecraft region for first available data between {start} to {stop}\")\n",
-    "print(\"\")\n",
-    "n = 0\n",
-    "for idx, dataset in enumerate(datasets):\n",
-    "    id = \"{:15s}\".format(datasets[idx][\"id\"])\n",
-    "    if \"Spacecraft_Region\" in datasets[idx]:\n",
-    "        n = n + 1\n",
-    "        if datasets[idx][\"Spacecraft_Region\"] is not None:\n",
-    "            print(f'{id}  {datasets[idx][\"Spacecraft_Region\"]}\\t {datasets[idx][\"First_Value\"]}')\n",
-    "        else:\n",
-    "            print(f'{id}  No values available')\n",
-    "\n",
-    "    if short_run and n > 3:\n",
-    "        break\n",
-    "\n",
-    "```"
+    "See `misc/region.py` (will be removed prior to Summer School)"
    ]
   },
   {
@@ -301,7 +168,7 @@
    "suppress_output": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
