--- a/HAPI_01.ipynb
+++ b/HAPI_01.ipynb
@@ -20708,7 +20708,7 @@
    "suppress_output": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -20722,7 +20722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true,
   "toc-showtags": false
