--- a/HAPI_02.ipynb
+++ b/HAPI_02.ipynb
@@ -1302,7 +1302,7 @@
    "suppress_output": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1316,7 +1316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
