--- a/HAPI_01.ipynb
+++ b/HAPI_01.ipynb
@@ -6,10 +6,11 @@
    "source": [
     "# Class Notebooks\n",
     "\n",
-    "* **[HAPI_01.ipynb - Basics](HAPI_01.ipynb) (this Notebook)**\n",
-    "* [HAPI_02.ipynb - Data structures](HAPI_02.ipynb)\n",
-    "* [HAPI_03.ipynb - Plotting](HAPI_03.ipynb)\n",
-    "* [HAPI_04.ipynb - Problems](HAPI_04.ipynb)\n",
+    "* [HAPI_00.ipynb](HAPI_00.ipynb) - Introduction\n",
+    "* **[HAPI_01.ipynb](HAPI_01.ipynb) - Basics (this Notebook)**\n",
+    "* [HAPI_02.ipynb](HAPI_02.ipynb) - Data structures\n",
+    "* [HAPI_03.ipynb](HAPI_03.ipynb) - Plotting\n",
+    "* [HAPI_04.ipynb](HAPI_04.ipynb) - Problems\n",
     "\n",
     "# Setup\n",
     "\n",
