--- a/HAPI_02.ipynb
+++ b/HAPI_02.ipynb
@@ -8,10 +8,11 @@
    "source": [
     "# Overview of Notebooks\n",
     "\n",
-    "* [HAPI_01.ipynb - Basics](HAPI_01.ipynb) \n",
-    "* **[HAPI_02.ipynb - Data structures](HAPI_02.ipynb) (this Notebook)**\n",
-    "* [HAPI_03.ipynb - Plotting](HAPI_03.ipynb)\n",
-    "* [HAPI_04.ipynb - Problems](HAPI_04.ipynb)"
+    "* [HAPI_00.ipynb](HAPI_00.ipynb) - Introduction\n",
+    "* [HAPI_01.ipynb](HAPI_01.ipynb) - Basics\n",
+    "* **[HAPI_02.ipynb](HAPI_02.ipynb) - Data structures (this Notebook)**\n",
+    "* [HAPI_03.ipynb](HAPI_03.ipynb) - Plotting\n",
+    "* [HAPI_04.ipynb](HAPI_04.ipynb) - Problems"
    ]
   },
   {
