--- a/HAPI_01.ipynb
+++ b/HAPI_01.ipynb
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "!pip install --upgrade hapiclient hapiplot"
+    "!pip install --upgrade hapiclient hapiplot > /dev/null"
    ]
   },
   {
