--- a/HAPI_03.ipynb
+++ b/HAPI_03.ipynb
@@ -8,9 +8,10 @@
    "source": [
     "# Class Notebooks\n",
     "\n",
-    "* [HAPI_01.ipynb - Basics](HAPI_01.ipynb) \n",
-    "* [HAPI_02.ipynb - Data structures](HAPI_02.ipynb)\n",
-    "* **[HAPI_03.ipynb - Plotting](HAPI_03.ipynb) (this Notebook)**\n",
+    "* [HAPI_00.ipynb](HAPI_00.ipynb) - Introduction\n",
+    "* [HAPI_01.ipynb](HAPI_01.ipynb) - Basics\n",
+    "* [HAPI_02.ipynb](HAPI_02.ipynb) - Data structures\n",
+    "* **[HAPI_03.ipynb](HAPI_03.ipynb) - Plotting (this Notebook)**\n",
     "* [HAPI_04.ipynb - Problems](HAPI_04.ipynb)"
    ]
   },
@@ -102,7 +103,7 @@
     }
    ],
    "source": [
-    "!pip install --upgrade hapiclient hapiplot"
+    "!pip install --upgrade hapiclient hapiplot > /dev/null"
    ]
   },
   {
