--- a/HAPI_02.ipynb
+++ b/HAPI_02.ipynb
@@ -41,46 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: hapiclient in /opt/anaconda3/lib/python3.7/site-packages (0.2.4)\n",
-      "Requirement already satisfied: hapiplot in /Users/weigel/git/hapi/plot-python (0.2.0)\n",
-      "Requirement already satisfied: pandas>=0.23 in /opt/anaconda3/lib/python3.7/site-packages (from hapiclient) (1.1.5)\n",
-      "Requirement already satisfied: joblib in /opt/anaconda3/lib/python3.7/site-packages (from hapiclient) (1.0.0)\n",
-      "Requirement already satisfied: urllib3 in /opt/anaconda3/lib/python3.7/site-packages (from hapiclient) (1.26.2)\n",
-      "Requirement already satisfied: isodate>=0.6.0 in /opt/anaconda3/lib/python3.7/site-packages (from hapiclient) (0.6.0)\n",
-      "Requirement already satisfied: numpy>=1.14.3 in /opt/anaconda3/lib/python3.7/site-packages (from hapiclient) (1.20.3)\n",
-      "Requirement already satisfied: six in /opt/anaconda3/lib/python3.7/site-packages (from isodate>=0.6.0->hapiclient) (1.15.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/anaconda3/lib/python3.7/site-packages (from pandas>=0.23->hapiclient) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /opt/anaconda3/lib/python3.7/site-packages (from pandas>=0.23->hapiclient) (2020.4)\n",
-      "Requirement already satisfied: matplotlib in /opt/anaconda3/lib/python3.7/site-packages (from hapiplot) (3.2.2)\n",
-      "Requirement already satisfied: deepdiff<3.3.0 in /opt/anaconda3/lib/python3.7/site-packages (from hapiplot) (3.2.1)\n",
-      "Requirement already satisfied: pillow in /opt/anaconda3/lib/python3.7/site-packages (from hapiplot) (8.0.1)\n",
-      "Requirement already satisfied: pytest in /opt/anaconda3/lib/python3.7/site-packages (from hapiplot) (0.0.0)\n",
-      "Requirement already satisfied: jsonpickle in /opt/anaconda3/lib/python3.7/site-packages/jsonpickle-1.4.1-py3.7.egg (from deepdiff<3.3.0->hapiplot) (1.4.1)\n",
-      "Requirement already satisfied: importlib-metadata in /opt/anaconda3/lib/python3.7/site-packages (from jsonpickle->deepdiff<3.3.0->hapiplot) (2.1.2)\n",
-      "Requirement already satisfied: zipp>=0.5 in /opt/anaconda3/lib/python3.7/site-packages (from importlib-metadata->jsonpickle->deepdiff<3.3.0->hapiplot) (3.4.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/anaconda3/lib/python3.7/site-packages (from matplotlib->hapiplot) (1.3.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /opt/anaconda3/lib/python3.7/site-packages (from matplotlib->hapiplot) (2.4.7)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/anaconda3/lib/python3.7/site-packages (from matplotlib->hapiplot) (0.10.0)\n",
-      "Requirement already satisfied: attrs>=19.2.0 in /opt/anaconda3/lib/python3.7/site-packages (from pytest->hapiplot) (20.3.0)\n",
-      "Requirement already satisfied: iniconfig in /opt/anaconda3/lib/python3.7/site-packages (from pytest->hapiplot) (1.1.1)\n",
-      "Requirement already satisfied: packaging in /opt/anaconda3/lib/python3.7/site-packages (from pytest->hapiplot) (20.8)\n",
-      "Requirement already satisfied: pluggy<1.0.0a1,>=0.12 in /opt/anaconda3/lib/python3.7/site-packages (from pytest->hapiplot) (0.13.1)\n",
-      "Requirement already satisfied: py>=1.8.2 in /opt/anaconda3/lib/python3.7/site-packages (from pytest->hapiplot) (1.10.0)\n",
-      "Requirement already satisfied: toml in /opt/anaconda3/lib/python3.7/site-packages (from pytest->hapiplot) (0.10.1)\n"
-     ]
-    }
-   ],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "!pip install --upgrade hapiclient hapiplot"
+    "!pip install --upgrade hapiclient hapiplot > /dev/null"
    ]
   },
   {
