--- a/HAPI_04.ipynb
+++ b/HAPI_04.ipynb
@@ -8,10 +8,9 @@
    "source": [
     "# Class Notebooks\n",
     "\n",
-    "\n",
     "* [HAPI_00.ipynb](HAPI_00.ipynb) - Introduction\n",
     "* [HAPI_01.ipynb](HAPI_01.ipynb) - Basics\n",
-    "* **[HAPI_02.ipynb](HAPI_02.ipynb) - Data structures (this Notebook)**\n",
+    "* [HAPI_02.ipynb](HAPI_02.ipynb) - Data structures\n",
     "* [HAPI_03.ipynb](HAPI_03.ipynb) - Plotting\n",
     "* **[HAPI_04.ipynb](HAPI_04.ipynb) - Problems (this Notebook)**"
    ]
