added **opts and cache to examples

--- a/HAPI_02.ipynb
+++ b/HAPI_02.ipynb
@@ -93,8 +93,9 @@
     "parameters = 'scalar,vector'\n",
     "start      = '1970-01-01T00:00:00'\n",
     "stop       = '1970-01-01T00:00:10'\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
-    "data,meta = hapi(server,dataset,parameters,start,stop)"
+    "data,meta = hapi(server,dataset,parameters,start,stop,**opts)"
    ]
   },
   {
@@ -412,8 +413,9 @@
     "parameters = 'X_GEO'\n",
     "start      = '2022-01-01T00:00:00.000Z'\n",
     "stop       = '2022-01-10T00:00:00.000Z'\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
-    "data, meta = hapi(server, dataset, parameters, start, stop);\n",
+    "data, meta = hapi(server, dataset, parameters, start, stop, **opts);\n",
     "\n",
     "# Your code here"
    ]
@@ -445,8 +447,9 @@
     "parameters = 'scalar,vector'\n",
     "start      = '1970-01-01T00:00:00'\n",
     "stop       = '1970-01-01T00:00:10'\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",    
     "\n",
-    "data, meta = hapi(server, dataset, parameters, start, stop)"
+    "data, meta = hapi(server, dataset, parameters, start, stop, **opts)"
    ]
   },
   {
@@ -677,8 +680,9 @@
     "parameters = 'scalar,vector'\n",
     "start      = '1970-01-01T00:00:00'\n",
     "stop       = '1970-01-01T00:00:10'\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",    
     "\n",
-    "data, meta = hapi(server,dataset,parameters,start,stop)\n",
+    "data, meta = hapi(server,dataset,parameters,start,stop, **opts)\n",
     "\n",
     "import pandas\n",
     "\n",
@@ -816,8 +820,9 @@
     "parameters = 'scalar,vector'\n",
     "start      = '1970-01-01T00:00:00'\n",
     "stop       = '1970-01-01T00:00:10'\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
-    "data, meta = hapi(server, dataset, parameters, start, stop)\n",
+    "data, meta = hapi(server, dataset, parameters, start, stop, **opts)\n",
     "\n",
     "dateTimes = hapitime2datetime(data['Time'])\n",
     "\n",
