--- a/HAPI_03.ipynb
+++ b/HAPI_03.ipynb
@@ -3274,11 +3274,12 @@
     "parameters = 'scalar,vector'\n",
     "start      = '1970-01-01T00:00:00'\n",
     "stop       = '1970-01-01T00:59:59'\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
     "# Method 1.\n",
     "from hapiclient import hapi\n",
     "from hapiplot import hapiplot\n",
-    "data, meta = hapi(server, dataset, parameters, start, stop)\n",
+    "data, meta = hapi(server, dataset, parameters, start, stop, **opts)\n",
     "hapiplot(data, meta)\n",
     "\n",
     "if False:\n",
@@ -4305,8 +4306,9 @@
     "parameters = 'scalar'\n",
     "start      = '1970-01-01T00:00:00'\n",
     "stop       = '1970-01-01T00:00:10'\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
-    "data, meta = hapi(server, dataset, parameters, start, stop)\n",
+    "data, meta = hapi(server, dataset, parameters, start, stop, **opts)\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "from hapiclient import hapitime2datetime\n",
@@ -4491,8 +4493,9 @@
     "parameters = 'scalar,vector'\n",
     "start      = '1970-01-01T00:00:00'\n",
     "stop       = '1970-01-01T00:00:10'\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
-    "data, meta = hapi(server,dataset,parameters,start,stop)\n",
+    "data, meta = hapi(server,dataset,parameters,start,stop,**opts)\n",
     "\n",
     "import pandas\n",
     "# Create dataframe\n",
@@ -11170,6 +11173,7 @@
     "parameters = 'SW_P_Den,SW_V'\n",
     "start      = '1992-09-08T07:30:40Z'\n",
     "stop       = '1992-09-10T07:30:40.000Z'\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
     "x = pyhapi(trange=[start, stop], server=server, dataset=dataset, parameters=parameters)\n",
     "\n",
