--- a/HAPI_00.ipynb
+++ b/HAPI_00.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "This class will cover the use of the [`hapiclient`](https://github.com/hapi-server/client-python) Python package, which allows you obtain data from over 8 different data servers with a few lines of code.\n",
+    "This class will cover the use of the [`hapiclient`](https://github.com/hapi-server/client-python) Python package, which allows you obtain data from over 9 different data servers with a few lines of code.\n",
     "\n",
     "We will also show how data obtained with `hapiclient` can be used in other Heliophysics Python packages.\n",
     "\n",
@@ -122,7 +122,7 @@
     "* 20-minutes for students work on two problems\n",
     "* 5-minute discussion of solution to problems and common questions \n",
     "\n",
-    "## [HAPI_03.ipynb](HAPI_03.ipynb) - Plotting\n",
+    "### [HAPI_03.ipynb](HAPI_03.ipynb) - Plotting\n",
     "\n",
     "* 5-minute overview\n",
     "* 20-minutes for students work on two problems\n",
@@ -146,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
