--- a/HAPI_02.ipynb
+++ b/HAPI_02.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {
     "id": "ZFRo76fzW6Dl"
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -133,7 +133,7 @@
        "      dtype=[('Time', 'S24'), ('scalar', '<f8'), ('vector', '<f8', (3,))])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -173,7 +173,7 @@
        "      dtype='|S24')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,20 +390,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hapi(): Running hapi.py version 0.2.3\n",
-      "hapi(): file directory = hapi-server.org_servers_SSCWeb_hapi\n",
-      "hapi(): Reading moon_X_GEO_20220101T000000000_20220110T000000000.pkl\n",
-      "hapi(): Reading moon_X_GEO_20220101T000000000_20220110T000000000.npy \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from hapiclient import hapi\n",
     "\n",
@@ -431,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {
     "id": "bYIrxLUOW6Do"
    },
@@ -451,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -471,7 +460,7 @@
        "      dtype='|S24')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -506,7 +495,7 @@
        "       datetime.datetime(1970, 1, 1, 0, 0, 9, tzinfo=<UTC>)], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -662,7 +651,7 @@
        "1970-01-01 00:00:09+00:00  0.047106  0.047106 -0.673013 -0.998890"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,72 +717,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ndcube astropy --upgrade > /dev/null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "id": "UGU9nYBQW6Ds"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting ndcube\n",
-      "  Downloading ndcube-2.0.1-py3-none-any.whl (108 kB)\n",
-      "\u001b[K     |████████████████████████████████| 108 kB 26.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: astropy>=4.2 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from ndcube) (5.0.1)\n",
-      "Collecting gwcs>=0.15\n",
-      "  Downloading gwcs-0.18.1-py3-none-any.whl (104 kB)\n",
-      "\u001b[K     |████████████████████████████████| 104 kB 70.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: numpy>1.17 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from ndcube) (1.22.2)\n",
-      "Requirement already satisfied: packaging>=19.0 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from astropy>=4.2->ndcube) (21.3)\n",
-      "Requirement already satisfied: PyYAML>=3.13 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from astropy>=4.2->ndcube) (5.4.1)\n",
-      "Requirement already satisfied: pyerfa>=2.0 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from astropy>=4.2->ndcube) (2.0.0.1)\n",
-      "Requirement already satisfied: scipy in /srv/conda/envs/notebook/lib/python3.9/site-packages (from gwcs>=0.15->ndcube) (1.8.0)\n",
-      "Collecting asdf-wcs-schemas\n",
-      "  Downloading asdf_wcs_schemas-0.1.1.tar.gz (22 kB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting asdf-astropy>=0.2.0\n",
-      "  Downloading asdf_astropy-0.2.0-py3-none-any.whl (60 kB)\n",
-      "\u001b[K     |████████████████████████████████| 60 kB 11.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting asdf>=2.8.1\n",
-      "  Downloading asdf-2.11.0-py3-none-any.whl (402 kB)\n",
-      "\u001b[K     |████████████████████████████████| 402 kB 81.9 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: jsonschema>=4.0.1 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from asdf>=2.8.1->gwcs>=0.15->ndcube) (4.4.0)\n",
-      "Collecting semantic-version>=2.8\n",
-      "  Downloading semantic_version-2.9.0-py2.py3-none-any.whl (15 kB)\n",
-      "Collecting asdf-standard>=1.0.1\n",
-      "  Downloading asdf_standard-1.0.1-py3-none-any.whl (68 kB)\n",
-      "\u001b[K     |████████████████████████████████| 68 kB 11.1 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting asdf-transform-schemas>=0.2.2\n",
-      "  Downloading asdf_transform_schemas-0.2.2-py3-none-any.whl (191 kB)\n",
-      "\u001b[K     |████████████████████████████████| 191 kB 81.3 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: jmespath>=0.6.2 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from asdf>=2.8.1->gwcs>=0.15->ndcube) (0.10.0)\n",
-      "Collecting asdf-coordinates-schemas\n",
-      "  Downloading asdf_coordinates_schemas-0.1.0.tar.gz (11 kB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from jsonschema>=4.0.1->asdf>=2.8.1->gwcs>=0.15->ndcube) (0.18.1)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from jsonschema>=4.0.1->asdf>=2.8.1->gwcs>=0.15->ndcube) (21.4.0)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /srv/conda/envs/notebook/lib/python3.9/site-packages (from packaging>=19.0->astropy>=4.2->ndcube) (3.0.7)\n",
-      "Building wheels for collected packages: asdf-coordinates-schemas, asdf-wcs-schemas\n",
-      "  Building wheel for asdf-coordinates-schemas (PEP 517) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for asdf-coordinates-schemas: filename=asdf_coordinates_schemas-0.1.0-py3-none-any.whl size=19013 sha256=18a0bd0b338befce88fabeee349ea304ca59645006004b0cc080b800931d202d\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/d2/ec/e5/fa0a97eac37491832995f130264c88aa8e1033689e4cb5211f\n",
-      "  Building wheel for asdf-wcs-schemas (PEP 517) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for asdf-wcs-schemas: filename=asdf_wcs_schemas-0.1.1-py3-none-any.whl size=26608 sha256=31fab1c051c25417f7df9232343e3eb1c5f5bc74f8cced8559b0d163731afad5\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/39/de/77/432e1ddeb8056a8f97c31817a2813a3fd03695e50f9f60e000\n",
-      "Successfully built asdf-coordinates-schemas asdf-wcs-schemas\n",
-      "Installing collected packages: asdf-standard, semantic-version, asdf-transform-schemas, asdf, asdf-coordinates-schemas, asdf-wcs-schemas, asdf-astropy, gwcs, ndcube\n",
-      "Successfully installed asdf-2.11.0 asdf-astropy-0.2.0 asdf-coordinates-schemas-0.1.0 asdf-standard-1.0.1 asdf-transform-schemas-0.2.2 asdf-wcs-schemas-0.1.1 gwcs-0.18.1 ndcube-2.0.1 semantic-version-2.9.0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<ndcube.ndcube.NDCube object at 0x7f7914be64f0>\n",
+       "<ndcube.ndcube.NDCube object at 0x7fbef1132910>\n",
        "NDCube\n",
        "------\n",
        "Dimensions: [10.] pix\n",
@@ -802,7 +743,7 @@
        "Data Type: float64"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +769,6 @@
     "import astropy.units as u\n",
     "import numpy as np\n",
     "\n",
-    "!pip install ndcube\n",
     "import ndcube\n",
     "\n",
     "my_wcs = astropy.wcs.WCS({\"CTYPE1\": \"TIME\", \n",
@@ -882,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -904,7 +844,7 @@
        "      dtype=[('Time', 'S24'), ('vector', '<f8', (3,))])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -967,7 +907,7 @@
        "      dtype=[('Time', 'S24'), ('matrix', '<f8', (3, 3))])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
