--- a/HAPI_04.ipynb
+++ b/HAPI_04.ipynb
@@ -142,6 +142,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Interpolating Time\n",
+    "\n",
+    "# Coordinate Transform\n",
+    "\n",
     "# Plotting\n",
     "\n",
     "Use any plotting software to create a stack plot similar to the following."
@@ -169,7 +173,7 @@
    "suppress_output": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
