add cache and imgs

--- a/HAPI_04.ipynb
+++ b/HAPI_04.ipynb
@@ -63,38 +63,22 @@
     "    ... (243 more lines)\n",
     "    ```\n",
     "\n",
-    "1. Create a plot showing the time interval of availability of ephemeris data from the SSCWeb HAPI server. The plot should have the form\n",
+    "1. Create a plot showing the time interval of availability of ephemeris data from the SSCWeb HAPI server. The plot should look similar to the following.\n",
     "\n",
-    "    ![](imgs/avail.png)\n",
+    "    ![](imgs/availability-1.svg)\n",
     "\n",
     "\n",
     "### Solution\n",
     "\n",
-    "1\\. Table\n",
-    "\n",
-    "```python\n",
-    "with open('data/availability.pkl', 'rb') as f:\n",
-    "    datasets = pickle.load(f)\n",
-    "    logging.info('Read availability.pkl')\n",
-    "\n",
-    "for idx, dataset in enumerate(datasets):\n",
-    "    # Pad ids\n",
-    "    id = \"{:15s}\".format(datasets[idx][\"id\"])\n",
-    "    print(f'{id}  {datasets[idx][\"startDate\"]}  {datasets[idx][\"stopDate\"]}')\n",
-    "```\n",
-    "\n",
-    "2\\. Plot\n",
-    "\n",
-    "See `misc/availability.py` (will be removed prior to Summer School)\n",
+    "Solutions will be posted at the end of the class period.\n",
     "\n",
     "## Advanced\n",
     "\n",
-    "Write a program that creates the information in `datasets` by querying the SSCWeb HAPI server.\n",
-    "\n",
+    "Write a program that creates the information in the dictionary `datasets` by querying the SSCWeb HAPI server.\n",
     "\n",
     "### Solution\n",
     "\n",
-    "See `availability()` in `misc/util.py` (will be removed prior to Summer School)"
+    "Solutions will be posted at the end of the class period."
    ]
   },
   {
@@ -119,7 +103,7 @@
     "\n",
     "## Solution\n",
     "\n",
-    "See `misc/region.py` (will be removed prior to Summer School)"
+    "Solutions will be posted at the end of the class period."
    ]
   },
   {
@@ -130,10 +114,10 @@
     "\n",
     "Many datasets from CDAWeb contain ephemeris (position) data for the associated satellite.\n",
     "\n",
-    "Use https://hapi-server.org/servers/ or https://heliophysicsdata.gsfc.nasa.gov/\n",
+    "Use https://hapi-server.org/servers/ or https://heliophysicsdata.gsfc.nasa.gov/ to\n",
     "\n",
-    "1. to find a CDAWeb dataset that contains the ephemeris of a satellite, and\n",
-    "2. to find a SSCWeb dataset that contians the ephemeris of the same satellite.\n",
+    "1. find a CDAWeb dataset that contains the ephemeris of a satellite, and\n",
+    "2. find a SSCWeb dataset that contians the ephemeris of the same satellite.\n",
     "\n",
     "Create a plot that compares the results."
    ]
@@ -157,9 +141,9 @@
    "source": [
     "# Data Fusion\n",
     "\n",
-    "Use SunPy to obtain solar images for the event of DATE. On this date, the X spacecraft was 200 R_E upstream of Earth (and so in the interstellar medium). Obtain solar wind velocity measurements from X from DATE to DATE+4 days. \n",
+    "In the last part of the [SunPy Tutorial](https://github.com/heliophysicsPy/summer-school/blob/main/sunpy-tutorial/05-multi-observer-application.ipynb), you plotted solar images on 2021-04-24. \n",
     "\n",
-    "Can you seee the signature of the solar event in the X spacecraft solar wind velocity measurements?"
+    "Solar wind plasma typically ~4 days to propagate from the solar surface to Earth. "
    ]
   }
  ],
