--- a/HAPI_00.ipynb
+++ b/HAPI_00.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "The [Heliophysics Application Programmer’s Interface (HAPI)](http://hapi-server.org/) data access specification is a REST-based API and data streaming format specification for time series data [[Weigel et al., 2021](https://hapi-server.org/docs/Weigel_2021_HAPI-An_API_Standard_for_Accessing_Heliophysics_Time_Series_Data.pdf)].\n",
     "\n",
-    "A HAPI server serves time series data as a single continous data stream from any mission or data provider that has implemented a HAPI server.\n",
+    "A HAPI server serves time series data as a single continuous data stream from any mission or data provider that has implemented a HAPI server.\n",
     "\n",
     "HAPI servers\n",
     "\n",
@@ -29,9 +29,9 @@
     "* SPDF/SSCWeb\n",
     "* VirES/SWARM\n",
     "\n",
-    "All HAPI server holdings are accessible and brosable at http://hapi-server.org/servers/, which also contains links to the actual HAPI servers.\n",
+    "All HAPI server holdings are accessible and browseable at http://hapi-server.org/servers/, which also contains links to the actual HAPI servers.\n",
     "\n",
-    "To get data from a HAPI server, you one creates a URL of the form\n",
+    "To get data from a HAPI server, create a URL of the form\n",
     "\n",
     "```\n",
     "    http://server/hapi/data?dataset=DATASET&parameters=PARAMETERS&start=START&stop=STOP\n",
@@ -52,7 +52,7 @@
     "\n",
     "This specification was developed because no standard exists. Data providers use incompatible conventions so that automated access to and aggregation of data requires users to write custom code to read data for each data provider.\n",
     "\n",
-    "As an example, prior to HAPI, to write a Python program that downloads data using the web API from SSCWeb, CDAWeb, LISIRD, and AMDA would require writing four scripts that implements each of their APIs and handles different CSV and metadata file structures.\n",
+    "As an example, prior to HAPI, writiing a Python program that downloads data using the web API from SSCWeb, CDAWeb, LISIRD, and AMDA would require writing four scripts that implement each of their APIs and handle different CSV and metadata file structures.\n",
     "\n",
     "\n",
     "# Overview of HAPI Python Software"
@@ -64,7 +64,7 @@
    "source": [
     "The HAPI project has two parts\n",
     "\n",
-    "1. Developement of [the API standard](https://github.com/hapi-server/data-specification) (the URL syntax and the structure of the returned data and metadata)\n",
+    "1. Development of [the API standard](https://github.com/hapi-server/data-specification) (the URL syntax and the structure of the returned data and metadata)\n",
     "2. Development of [software that implements the standard](http://github.com/hapi-server/) (server-side software for data providers and client-side software for scientists)\n",
     "\n",
     "In this lab, you will learn to use the Python HAPI client, [`hapiclient`](https://github.com/hapi-server/client-python), and the plotting tool [`hapiplot`](https://github.com/hapi-server/plot-python).\n",
@@ -82,17 +82,17 @@
    "source": [
     "# A Note About Finding Data\n",
     "\n",
-    "As will be demonstrated, if you know what dataset and parameter you want, a few lines of Python (or IDL, MATLAB, etc.) is all that is needed to get data into your program in a form that is ready for analysis and plotting.\n",
+    "As will be demonstrated, if you know what dataset and parameter you want, only a few lines of Python (or IDL, MATLAB, etc.) are needed to get data into your program in a form that is ready for analysis and plotting.\n",
     "\n",
     "The HAPI project and HAPI standard addresses the \"**access**\" problem. That is, it makes accessing and reading data using software easy.\n",
     "\n",
     "However, the HAPI project does not address the \"**discovery**\" problem. That is, it does not address making discovering what data are available given a search term easy. \n",
     "\n",
-    "The page [https://hapi-server.org/servers](http://hapi-server.org/servers) contains a complete list of all HAPI servers and their datasets and parameters. It does not contain a global search (or discovery) interface, however. This interface may be useful if you have a general idea of what you are looking for (e.g., Solar Irradiance data from LASP/LISIRD).\n",
+    "The page [https://hapi-server.org/servers](http://hapi-server.org/servers) contains a complete list of all HAPI servers and their datasets and parameters. It does not have a global search (or discovery) interface, however. This interface may be useful if you have a general idea of what you are looking for (e.g., Solar Irradiance data from LASP/LISIRD).\n",
     "\n",
     "The [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/) can be used for more general searches and discovery. For example, a search for 'dst' data and 'hapi' (as keywords entered in the \"Text Restriction\" box) for the time range of Nov-Dec 2021 yields 33 entries: 8 for Cluster, 24 for MMS, and 1 for OMNI.\n",
     "\n",
-    "Currently, not all data available from HAPI servers is available for search at the [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/). There is an on-going effort to make all HAPI data searchable and discoverable from this interface."
+    "Currently, not all data available from HAPI servers are available for search at the [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/). There is an ongoing effort to make all HAPI data searchable and discoverable from this interface."
    ]
   },
   {
@@ -112,6 +112,7 @@
     "* 10-minute overview of the HAPI project and related software\n",
     "\n",
     "### [HAPI_01.ipynb](HAPI_01.ipynb) - Basics\n",
+    "\n",
     "* 5-minute overview\n",
     "* 10-minutes for students to work on two problems\n",
     "* 5-minute discussion of solution to problems and common questions \n",
@@ -134,10 +135,14 @@
     "\n",
     "## Part III 18:15-19:45 Madrid Time (16:30-17:15 UTC)\n",
     "\n",
+    "### [Introduction to ViRES](https://github.com/heliophysicsPy/summer-school/tree/main/vires-swarm-tutorial)\n",
+    "\n",
+    "* 10-minute overview by Ashley Smith of the [ViRES project](https://vires.services/)\n",
+    "\n",
     "### [HAPI_04.ipynb](HAPI_04.ipynb) - Problems\n",
     "\n",
     "* 5-minute overview\n",
-    "* 70-minutes for students work on two problems    \n",
+    "* 60-minutes for students work on two problems    \n",
     "* 15-minute discussion of solution to problems and common questions \n",
     "\n",
     "* Closing remarks"
