--- a/HAPI_02.ipynb
+++ b/HAPI_02.ipynb
@@ -402,7 +402,7 @@
     "parameters = 'X_GEO'\n",
     "start      = '2022-01-01T00:00:00.000Z'\n",
     "stop       = '2022-01-10T00:00:00.000Z'\n",
-    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapidata'}\n",
     "\n",
     "data, meta = hapi(server, dataset, parameters, start, stop, **opts);\n",
     "\n",
@@ -436,7 +436,7 @@
     "parameters = 'scalar,vector'\n",
     "start      = '1970-01-01T00:00:00'\n",
     "stop       = '1970-01-01T00:00:10'\n",
-    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",    
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
     "data, meta = hapi(server, dataset, parameters, start, stop, **opts)"
    ]
@@ -669,7 +669,7 @@
     "parameters = 'scalar,vector'\n",
     "start      = '1970-01-01T00:00:00'\n",
     "stop       = '1970-01-01T00:00:10'\n",
-    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",    
+    "opts       = {'logging': False, 'usecache': True, 'cachedir': './hapicache'}\n",
     "\n",
     "data, meta = hapi(server,dataset,parameters,start,stop, **opts)\n",
     "\n",
@@ -1257,7 +1257,7 @@
    "suppress_output": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
