--- a/HAPI_04.ipynb
+++ b/HAPI_04.ipynb
@@ -168,13 +168,13 @@
     "\n",
     "There are many ways to do this, for example,\n",
     "\n",
-    "* Convert the timestamps in the `NumPy` array returned by `hapi` into integers, create a 1-D array of time integers to interpolate on to, and then either write your own interpolation function (not recommended) or use an interpolation function in [`Numpy`](https://numpy.org/doc/stable/reference/generated/numpy.interp.html) or [`SciPy`](https://docs.scipy.org/doc/scipy/reference/interpolate.html).\n",
+    "* Convert the timestamps in the `NumPy` array returned by `hapi` into integers, create a 1-D array of time integers to interpolate on to, and then either write your own interpolation function (not recommended) or use an interpolation function in [`Numpy`](https://numpy.org/doc/stable/reference/generated/numpy.interp.html) or [`SciPy`](https://docs.scipy.org/doc/scipy/reference/interpolate.html). An example of converting `hapi` timestamps to `datetime` objects was given in [HAPI_02.ipynb#Time-Representation](HAPI_02.ipynb#Time-Representation); one can use [`datetime` methods](https://docs.python.org/3/library/datetime.html) to convert `datetime` objects into integers.\n",
     "\n",
     "\n",
-    "* Place data in a Pandas data frame and use data frame interpolation methods ([tutorial].(https://towardsdatascience.com/how-to-interpolate-time-series-data-in-apache-spark-and-python-pandas-part-1-pandas-cff54d76a2ea))\n",
+    "* Place data in a Pandas data frame and use data frame interpolation methods (an example of placing data in a Pandas data frame was given in [HAPI_02.ipynb#Convert-to-Pandas-DataFrame](HAPI_02.ipynb#Convert-to-Pandas-DataFrame)).\n",
     "\n",
     "\n",
-    "* In the [SpacePy](https://github.com/heliophysicsPy/summer-school/blob/main/spacepy-tutorial/SpacePy%20-%20MMS%20Ephemeris.md) tutorial (search on `tb.inter`), you will use the [`interpol`](https://spacepy.github.io/autosummary/spacepy.toolbox.interpol.html#spacepy.toolbox.interpol) function in [`spacepy.toolbox`](https://spacepy.github.io/toolbox.html) to do this.\n",
+    "* In the [SpacePy](https://github.com/heliophysicsPy/summer-school/blob/main/spacepy-tutorial/SpacePy%20-%20MMS%20Ephemeris.md) tutorial (search on `tb.inter`) later in the week, you will use the [`interpol`](https://spacepy.github.io/autosummary/spacepy.toolbox.interpol.html#spacepy.toolbox.interpol) function in [`spacepy.toolbox`](https://spacepy.github.io/toolbox.html) to do this.\n",
     "\n",
     "The following program reads data from two different data servers. \n",
     "\n",
@@ -187,7 +187,7 @@
     "\n",
     "The following program uses SpacePy to perform a coordinate transform.\n",
     "\n",
-    "1. Obtain data from the SSCWeb HAPI server from `2003-10-31T23:00:00Z` to `2003-10-31T23:59:00Z`.\n",
+    "1. Obtain data from the SSCWeb HAPI server for the `ACE` spacecraft from `2003-10-31T23:00:00Z` to `2003-10-31T23:59:00Z`.\n",
     "2. Print out the `GSM` and `GSE` values.\n",
     "3. Use SpacePy to convert the `GSM` values to `GSE`.\n"
    ]
