cache files; solns

--- a/HAPI_04.ipynb
+++ b/HAPI_04.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "## Advanced\n",
     "\n",
-    "Write a program that creates the information in the dictionary `datasets` by querying the SSCWeb HAPI server. That is, write a program that creates the content that is stored in `availability.pkl`.\n",
+    "Write a program that creates the information in the dictionary `datasets` by querying the SSCWeb HAPI server. That is, write a program that creates the content that is stored in `availability.pkl`. (Metadata queries were covered in [HAPI_02.ipynb#Metadata](HAPI_02.ipynb#Metadata)).\n",
     "\n",
     "### Solution\n",
     "\n",
@@ -174,22 +174,30 @@
     "* Place data in a Pandas data frame and use data frame interpolation methods (an example of placing data in a Pandas data frame was given in [HAPI_02.ipynb#Convert-to-Pandas-DataFrame](HAPI_02.ipynb#Convert-to-Pandas-DataFrame)).\n",
     "\n",
     "\n",
-    "* In the [SpacePy](https://github.com/heliophysicsPy/summer-school/blob/main/spacepy-tutorial/SpacePy%20-%20MMS%20Ephemeris.md) tutorial (search on `tb.inter`) later in the week, you will use the [`interpol`](https://spacepy.github.io/autosummary/spacepy.toolbox.interpol.html#spacepy.toolbox.interpol) function in [`spacepy.toolbox`](https://spacepy.github.io/toolbox.html) to do this.\n",
+    "* In the [SpacePy](https://github.com/heliophysicsPy/summer-school/blob/main/spacepy-tutorial/SpacePy%20-%20MMS%20Ephemeris.md) tutorial (search on `tb.inter`) on Day 2, you used the [`interpol`](https://spacepy.github.io/autosummary/spacepy.toolbox.interpol.html#spacepy.toolbox.interpol) function in [`spacepy.toolbox`](https://spacepy.github.io/toolbox.html) to perform interpolation.\n",
     "\n",
-    "The following program reads data from two different data servers. \n",
+    "The following program reads data from two different data servers. Using any library (or your own code)\n",
     "\n",
     "1. Write a program that places the data on a uniform 1-minute time grid that spans the time range of availability of both datasets.\n",
     "\n",
     "2. Create a table or plot that allows one to visually compare the interpolated values with the given values.\n",
     "\n",
     "\n",
+    "## Solution\n",
+    "\n",
+    "A sample solution will be posted at the end of the class period.\n",
+    "\n",
     "# Coordinate Transform\n",
     "\n",
     "The following program uses SpacePy to perform a coordinate transform.\n",
     "\n",
-    "1. Obtain data from the SSCWeb HAPI server for the `ACE` spacecraft from `2003-10-31T23:00:00Z` to `2003-10-31T23:59:00Z`.\n",
-    "2. Print out the `GSM` and `GSE` values.\n",
-    "3. Use SpacePy to convert the `GSM` values to `GSE`.\n"
+    "1. Obtain data from the SSCWeb HAPI server for the `SWARM-A` spacecraft from `2013-11-26T00:00:00Z` to `2013-11-26T00:01:00Z`. (Please only use this time range during the class period.)\n",
+    "2. Print out the `GSE` and `GSM` values reported by SSCWeb.\n",
+    "3. Use SpacePy to convert the `GSE` values to `GSM`.\n",
+    "\n",
+    "## Solution\n",
+    "\n",
+    "A sample solution will be posted at the end of the class period."
    ]
   },
   {
@@ -202,7 +210,11 @@
     "\n",
     "Solar wind plasma typically ~4 days to propagate from the solar surface to Earth. \n",
     "\n",
-    "Find and plot data from at least one spacecraft from `2021-04-24` to `2021-04-30`. Be prepared to answer questions about your interpretation of any features in the time series."
+    "Find and plot data from at least one spacecraft from `2021-04-24` to `2021-04-30`. Be prepared to answer questions about your interpretation of any features in the time series.\n",
+    "\n",
+    "## Solution\n",
+    "\n",
+    "A sample solution will be posted at the end of the class period."
    ]
   }
  ],
