--- a/HAPI_00.ipynb
+++ b/HAPI_00.ipynb
@@ -10,14 +10,14 @@
     "\n",
     "We will also show how data obtained with `hapiclient` can be used in other Heliophysics Python packages.\n",
     "\n",
+    "You will spend approximately 1/2 of the class period working on problems.\n",
+    "\n",
     "\n",
     "# Overview of the HAPI Standard\n",
     "\n",
     "The [Heliophysics Application Programmer’s Interface (HAPI)](http://hapi-server.org/) data access specification is a REST-based API and data streaming format specification for time series data [[Weigel et al., 2021](https://hapi-server.org/docs/Weigel_2021_HAPI-An_API_Standard_for_Accessing_Heliophysics_Time_Series_Data.pdf)].\n",
     "\n",
-    "A HAPI server serves time series data as a single continuous data stream from any mission or data provider that has implemented a HAPI server.\n",
-    "\n",
-    "HAPI servers\n",
+    "A HAPI server serves time series data as a single continuous data stream from any mission or data provider that has implemented a HAPI server. HAPI servers include (more coming)\n",
     "\n",
     "* CDPP/AMDA\n",
     "* CCMC/iSWA\n",
@@ -39,13 +39,8 @@
     "\n",
     "with the capitalized words replaced with relevant values. When this URL is entered, data is returned (in CSV by default, but binary is an option).\n",
     "\n",
-    "[`hapiclient`](https://github.com/hapi-server/client-python) passes this URL to a HAPI server and returns a NumPy data structure with the data. The user does not need to write code to read CSV (or binary) and the associated metadata."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "[`hapiclient`](https://github.com/hapi-server/client-python) passes this URL to a HAPI server and returns a NumPy data structure (`ndarray`) with the data. The user does not need to write code to read CSV (or binary) and the associated metadata.\n",
+    "\n",
     "# Motivation for the HAPI Standard\n",
     "\n",
     "The Heliophysics Application Programmer's Interface (HAPI) specification allows data providers to use a standard set of conventions for returning data in response to a URL-based request.\n",
@@ -55,17 +50,12 @@
     "As an example, prior to HAPI, writiing a Python program that downloads data using the web API from SSCWeb, CDAWeb, LISIRD, and AMDA would require writing four scripts that implement each of their APIs and handle different CSV and metadata file structures.\n",
     "\n",
     "\n",
-    "# Overview of HAPI Python Software"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Overview of HAPI Python Software\n",
+    "\n",
     "The HAPI project has two parts\n",
     "\n",
-    "1. Development of [the API standard](https://github.com/hapi-server/data-specification) (the URL syntax and the structure of the returned data and metadata)\n",
-    "2. Development of [software that implements the standard](http://github.com/hapi-server/) (server-side software for data providers and client-side software for scientists)\n",
+    "1. development of [the API standard](https://github.com/hapi-server/data-specification) (the URL syntax and the structure of the returned data and metadata) and\n",
+    "2. development of [software that implements the standard](http://github.com/hapi-server/) (server-side software for data providers and client-side software for scientists).\n",
     "\n",
     "In this lab, you will learn to use the Python HAPI client, [`hapiclient`](https://github.com/hapi-server/client-python), and the plotting tool [`hapiplot`](https://github.com/hapi-server/plot-python).\n",
     "\n",
@@ -73,13 +63,8 @@
     "\n",
     "`hapiplot` is a software package that was developed for testing and quick-look plots of data returned by `hapiclient`. \n",
     "\n",
-    "In this lab, you will also use the standard Python plotting package `Matplotlib` and plotting functions available in Heliophysics libraries such as `SunPy`, `PyTplot`, and `SpacePy`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In this lab, you will also use the standard Python plotting package `Matplotlib` and plotting functions available in Heliophysics libraries such as `SunPy`, `PyTplot`, and `SpacePy`.\n",
+    "\n",
     "# A Note About Finding Data\n",
     "\n",
     "As will be demonstrated, if you know what dataset and parameter you want, only a few lines of Python (or IDL, MATLAB, etc.) are needed to get data into your program in a form that is ready for analysis and plotting.\n",
@@ -92,16 +77,11 @@
     "\n",
     "The [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/) can be used for more general searches and discovery. For example, a search for 'dst' data and 'hapi' (as keywords entered in the \"Text Restriction\" box) for the time range of Nov-Dec 2021 yields 33 entries: 8 for Cluster, 24 for MMS, and 1 for OMNI.\n",
     "\n",
-    "Currently, not all data available from HAPI servers are available for search at the [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/). There is an ongoing effort to make all HAPI data searchable and discoverable from this interface."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Currently, not all data available from HAPI servers are available for search at the [Heliophysics Data Portal (HDP)](https://heliophysicsdata.gsfc.nasa.gov/). There is an ongoing effort to make all HAPI data searchable and discoverable from this interface.\n",
+    "\n",
     "# Outline of Class\n",
     "\n",
-    "We will have several [`hapiclient`](https://github.com/hapi-server/client-python) experts available on the Slack forum. Feel free to ask questions at any time.\n",
+    "We will have several [`hapiclient`](https://github.com/hapi-server/client-python) experts available on the Slack forum. Feel free to ask questions at any time, including during the break.\n",
     "\n",
     "Also feel free to ask me questions while I am presenting.\n",
     "\n",
@@ -109,24 +89,24 @@
     "\n",
     "### [HAPI_00.ipynb](HAPI_00.ipynb) - Introduction\n",
     "\n",
-    "* 10-minute overview of the HAPI project and related software\n",
+    "* 10-minute overview of the HAPI project and related software (this Notebook)\n",
     "\n",
     "### [HAPI_01.ipynb](HAPI_01.ipynb) - Basics\n",
     "\n",
     "* 5-minute overview\n",
-    "* 10-minutes for students to work on two problems\n",
+    "* 10-minutes for students to work on two problems; feel free to work ahead if you finish early\n",
     "* 5-minute discussion of solution to problems and common questions \n",
     "\n",
     "### [HAPI_02.ipynb](HAPI_02.ipynb) - Data structures\n",
     "\n",
     "* 5-minute overview\n",
-    "* 20-minutes for students work on two problems\n",
+    "* 20-minutes for students work on two problems; feel free to work ahead if you finish early\n",
     "* 5-minute discussion of solution to problems and common questions \n",
     "\n",
     "### [HAPI_03.ipynb](HAPI_03.ipynb) - Plotting\n",
     "\n",
     "* 5-minute overview\n",
-    "* 20-minutes for students work on two problems\n",
+    "* 20-minutes for students work on two problems; feel free to work ahead if you finish early\n",
     "* 5-minute discussion of solution to problems and common questions \n",
     "\n",
     "## Part II Break 17:30-18:15 Madrid Time (15:30-16:15 UTC)\n",
@@ -142,8 +122,8 @@
     "### [HAPI_04.ipynb](HAPI_04.ipynb) - Problems\n",
     "\n",
     "* 5-minute overview\n",
-    "* 60-minutes for students work on two problems    \n",
-    "* 15-minute discussion of solution to problems and common questions \n",
+    "* 50-minutes for students work on a problem of their choosing  \n",
+    "* 5-minute discussion of solution to problems and common questions \n",
     "\n",
     "* Closing remarks"
    ]
